; ModuleID = '/home/carl/AnghaBench/systemd/src/journal/extr_journald-server.c_server_full_sync.c'
source_filename = "/home/carl/AnghaBench/systemd/src/journal/extr_journald-server.c_server_full_sync.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [28 x i8] c"/run/systemd/journal/synced\00", align 1
@CLOCK_MONOTONIC = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [58 x i8] c"Failed to write /run/systemd/journal/synced, ignoring: %m\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @server_full_sync to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @server_full_sync(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i32 @assert(i32* %4)
  %6 = load i32*, i32** %2, align 8
  %7 = call i32 @server_sync(i32* %6)
  %8 = load i32, i32* @CLOCK_MONOTONIC, align 4
  %9 = call i32 @now(i32 %8)
  %10 = call i32 @write_timestamp_file_atomic(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0), i32 %9)
  store i32 %10, i32* %3, align 4
  %11 = load i32, i32* %3, align 4
  %12 = icmp slt i32 %11, 0
  br i1 %12, label %13, label %16

13:                                               ; preds = %1
  %14 = load i32, i32* %3, align 4
  %15 = call i32 @log_warning_errno(i32 %14, i8* getelementptr inbounds ([58 x i8], [58 x i8]* @.str.1, i64 0, i64 0))
  br label %16

16:                                               ; preds = %13, %1
  ret void
}

declare dso_local i32 @assert(i32*) #1

declare dso_local i32 @server_sync(i32*) #1

declare dso_local i32 @write_timestamp_file_atomic(i8*, i32) #1

declare dso_local i32 @now(i32) #1

declare dso_local i32 @log_warning_errno(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
